Fixed Image Editor's sticky toolbar overlapping the Wizard Navigator

--- a/src/main/resources/assets/styles/inputtype/selector/image/image-editor.less
+++ b/src/main/resources/assets/styles/inputtype/selector/image/image-editor.less
@@ -184,7 +184,7 @@
     display: block;
     top: 0;
     position: absolute;
-    z-index: @z-index-mask - 3; // because wizard-toolbar has z-index: @z-index-mask-2 and should be on top
+    z-index: @z-index-scroll-stick - 1; // because wizard-toolbar has z-index: @z-index-mask-2 and should be on top
     left: 1px; // account for image editor border
     width: 100%;
 
